# django-finacc

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
django_finacc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
finacc/: apps.py  conf.py  enums.py  exceptions.py  init.py  validators.py
finacc/api/: serializers.py  urls.py  views.py
finacc/data/: coa_india_basic.json  taxes_india_gst.json
finacc/mgmt/commands/: finacc_bootstrap_coa.py  finacc_close_period.py  finacc_seed_fx.py
finacc/models/: accounts.py  audit.py  company.py  docs.py  journal.py  period.py  tax.py
finacc/posting/: engine.py  rules.py  signals.py
finacc/tests/: test_period_lock.py  test_posting.py
finacc/utils/: fx.py  money.py  periods.py
