[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "django-finacc"
version = "0.1.0"
description = "Plug-and-play double-entry accounting for Django (GST, multi-currency, APIViews)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Verified Enquiries / Tushar K.", email = "support@verifiedenquiries.com"}]
license = {text = "MIT"}
dependencies = [
"Django>=5.0",
"djangorestframework>=3.15",
]
keywords = ["django", "accounting", "double-entry", "gst", "ledger", "trial-balance", "finacc"]
classifiers = [
"Framework :: Django",
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
]


[tool.setuptools]
include-package-data = true
packages = ["finacc", "finacc.utils", "finacc.models", "finacc.posting", "finacc.api", "finacc.mgmt.commands"]


[tool.setuptools.package-data]
finacc = ["data/*.json"]